# ai-harness

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  README.md  code_review.py  dependabot_review.py  generate_feature_plan.py  mcp_config.iac.json  mcp_config.js.json  mcp_config.json  mcp_config.python.json  memores_security_review.md  new_feature_harness.py  new_feature_prompt.md  pyproject.toml  run_evaluation.py  run_evaluation_iac.py  run_execution_harness.py  run_onboard_evaluation.py  run_security_evaluation.py
agents/: architect.md  architecture_review.md  code_implementer.md  code_reviewer.md  dependabot_reviewer.md  exploratory_architect.md  iac_architecture_review.md  integration_auditor.md  security.md  staff_onboarding.md
core/: agent.py  cache.py  git_provider.py  headroom.py  judge.py  mcp_client.py  mcp_orchestrator.py  mcp_servers.py  parser.py  runner.py  terragrunt_parser.py  warehouse.py
project_contexts/: memores-admin.md  memores-api.md
reports/: automated_code_review.md  automated_security_review.md  dependabot_review_report.md  new_feature_prompt.json  new_feature_prompt.md  staff_90_day_onboarding_roadmap.md  staff_architecture_review.md  staff_iac_architecture_review.md
rubrics/: architecture_rubric.json  code_review_rubric.json  exploration_rubric.json  iac_architecture_rubric.json  security_rubric.json  strategy_rubric.json
scorecards/: evaluation_history.db
