[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-harness"
dynamic = ["version"]

[tool.black]
target-version = ["py312"]
line-length = 88
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "LOG", # flake8-print / logging
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (black handles this)
    "E203",  # whitespace before ':'
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = [
    "build/",
]

[tool.bandit]
exclude_dirs = ["tests", "build"]
skips = ["B101"]

[tool.pylint]
master.jobs = 4
master.persistent = false
reports.output-format = "colorized"
reports.score = false
reports.reports = false
reports.msg-template = "{path}:{line}:{column}: {msg_id}: {msg} ({symbol})"
format.max-line-length = 888
similarities.min-similarity-lines = 10
similarities.ignore-comments = true
similarities.ignore-docstrings = true
similarities.ignore-imports = true
messages_control.disable = "all"
messages_control.enable = [
    "trailing-comma-tuple",
    "expression-not-assigned",
    "dangerous-default-value",
    "bare-except",
    "return-arg-in-generator",
    "return-in-init",
    "invalid-slots-object",
    "assigning-non-slot",
    "invalid-slots",
    "undefined-all-variable",
    "bad-except-order",
    "notimplemented-raised",
    "catching-non-exception",
    "bad-super-call",
    "simplifiable-if-statement",
    "redefined-argument-from-local",
    "duplicate-key",
    "confusing-with-statement",
    "using-constant-test",
    "assert-on-tuple",
    "useless-super-delegation",
    "duplicate-except",
    "boolean-datetime",
    "redefined-builtin",
    "unused-import",
    "unidiomatic-typecheck",
    "undefined-variable",
    "anomalous-unicode-escape-in-string",
    "anomalous-backslash-in-string",
    "syntax-error",
    "literal-comparison",
    "unreachable",
    "used-before-assignment",
    "function-redefined",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
